--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 *{
     padding: 0;
     margin: 0;
-    font-family: 'Poppins', 'sana=serif';
+    font-family:'Poppins', 'sans-serif';
     box-sizing: border-box;
 }
 /* cleaninig styles */
@@ -74,7 +74,7 @@
 }
 
 #result{
-    font-size: 20px;
+    font-size: 30px;
 }
 #result span{
     color: #ffff76;
